--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "colors": "^1.4.0",
-    "inquirer": "^12.3.2"
+    "inquirer": "^12.3.2",
+    "uuid": "^11.0.5"
   }
 }
